--- a/client/styles/config/_variables.scss
+++ b/client/styles/config/_variables.scss
@@ -1,6 +1,7 @@
 @use "./customFonts" as *;
 
-$primary-color: #dfa974;
+// $primary-color: #dfa974;
+$primary-color: red;
 $secondary-color: lighten($primary-color, 10%);
 $gray-color: #aaaab3;
 
