--- a/client/styles/config/_variables.scss
+++ b/client/styles/config/_variables.scss
@@ -1,7 +1,6 @@
 @use "./customFonts" as *;
 
-// $primary-color: #dfa974;
-$primary-color: red;
+$primary-color: #dfa974;
 $secondary-color: lighten($primary-color, 10%);
 $gray-color: #aaaab3;
 
