--- a/client/styles/components/_navbar.scss
+++ b/client/styles/components/_navbar.scss
@@ -7,6 +7,9 @@
   }
 
   .navbar {
+    @include breakpoint-down(md) {
+      padding: 0rem 0.4rem !important;
+    }
     &-brand {
       text-transform: capitalize;
       font-weight: 700;
